Made the month total on the same line as the export csv button

--- a/app.html
+++ b/app.html
@@ -61,7 +61,8 @@
         </select>
       </div>
 
-      <div style="text-align: right; margin-bottom: 1rem">
+      <div style="text-align: right; margin-bottom: 1rem" class="export-bar">
+        <div id="monthTotal" class="month-total-left"></div>
         <button
           id="exportBtn"
           style="
